// * Generaci칩n autom치tica con ts-proto y soporte NestJS
// * Ejecuta: 
// * npx protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto.cmd --ts_proto_out=./ --ts_proto_opt=nestJs=true ./libs/proto/src/services/__projectName___service/__projectName__.proto

syntax = "proto3";

package __projectNameCamel__;

//
// ================================
//   游닍 Servicio __ProjectName__Service
// ================================
//
// Contratos de comunicaci칩n entre el cliente y el servidor
// para la gesti칩n de ejemplos en la aplicaci칩n.
//
service __ProjectName__Service {
  // * Crear un nuevo ejemplo
  rpc create__ProjectName__(Create__ProjectName__Dto) returns (__ProjectName__) {}

  // * Obtener todos los ejemplos (no paginado)
  rpc getAll__ProjectName__s(__ProjectName__Empty) returns (__ProjectName__s) {}

  // * Obtener un ejemplo por ID
  rpc get__ProjectName__ById(Get__ProjectName__ByIdDto) returns (__ProjectName__) {}

  // * Actualizar un ejemplo existente
  rpc update__ProjectName__(Update__ProjectName__Dto) returns (__ProjectName__) {}

  // * Eliminar un ejemplo por ID
  rpc delete__ProjectName__(Get__ProjectName__ByIdDto) returns (__ProjectName__Empty) {}

  // * Obtener ejemplos paginados (cl치sico page + limit)
//   rpc getPaginated__ProjectName__s(PaginationRequest) returns (Paginated__ProjectName__s) {}

  // * Soporte para scroll infinito (cursor-based pagination)
  rpc get__ProjectName__sByCursor(CursorPaginationRequest) returns (CursorPaginated__ProjectName__s) {}
}

//
// ================================
//   游닌 Mensajes de entrada
// ================================
//

// ! Mensaje vac칤o (com칰n en operaciones sin payload)
message __ProjectName__Empty {}

// * Crear nuevo ejemplo
message Create__ProjectName__Dto {
  string name = 1;
  optional string description = 2;
}

// * Actualizar un ejemplo
message Update__ProjectName__Dto {
  string id = 1;
  Update__ProjectName__Data __projectNameCamel__ = 2;
}

// * Obtener un ejemplo por su ID
message Get__ProjectName__ByIdDto {
  string id = 1;
}

// * Solicitud de paginaci칩n cl치sica
// message PaginationRequest {
//   int32 page = 1;  // P치gina actual (empieza en 1)
//   int32 limit = 2; // Elementos por p치gina
// }

// * Solicitud de paginaci칩n por cursor (scroll infinito)
message CursorPaginationRequest {
  string afterId = 1; // ID del 칰ltimo elemento visto
  int32 limit = 2;    // Elementos siguientes a devolver
}

//
// ================================
//   游닋 Mensajes de salida
// ================================
//

// * Lista de m칰ltiples ejemplos (no paginada)
message __ProjectName__s {
  repeated __ProjectName__ __projectNameCamel__s = 1;
}

// * Lista de ejemplos paginada con `page`/`limit`
message Paginated__ProjectName__s {
  repeated __ProjectName__ __projectNameCamel__s = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

// * Lista de ejemplos paginada con `cursor`
message CursorPaginated__ProjectName__s {
  repeated __ProjectName__ __projectNameCamel__s = 1;
  string nextCursor = 2;
  bool hasMore = 3;
}

//
// ================================
//   游빔 Modelo base: __ProjectName__
// ================================
//

// * Representaci칩n base de un ejemplo
message __ProjectName__ {
  string id = 1;            // ! ID 칰nico del ejemplo
  string name = 2;
  optional string description = 3;
}

// * Datos anidados para actualizar un ejemplo
message Update__ProjectName__Data {
  string name = 1;
  optional string description = 2;
}
